@@ -1,1 +1,1 @@
-char cvsdate[]="2004-06-21 01:28";
+char cvsdate[]="2004-06-22 12:25";
