@@ -1,3 +1,15 @@
+2004-06-21 01:34  sisoft
+
+	* src/flagexp.y:
+
+	fix compiling.
+
+2004-06-21 01:30  sisoft
+
+	* autogen.sh, src/flagexp.y, src/flaglex.l:
+
+	fix pasring solid expressions.
+
 2004-06-20 22:50  sisoft
 
 	* autogen.sh, src/perl.c:
